src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: #ffffff;
    --text: #171717;
    --accent: #25abcb;
    --accent-dark: #1e93b0;
    --border: #eef5f8;
    
  }

  .dark {
    --background: #191a1d00;
    --text: #eeeeee;
    --accent: #25abcb;
    --accent-dark: #1b7f91;
    --border: #7e838977;
  }

  body {
    @apply font-primary bg-background text-text;
    margin: 0 auto;
    letter-spacing: -0.05em;
  }

  nav {
    @apply font-primary bg-background text-text;
  }

  main {
    @apply flex flex-col;
    letter-spacing: -0.05em;
    max-width: 80%;
    margin: 0 auto;
  }

  h1 {
    @apply font-header text-4xl my-4 text-text;
    font-weight: 700;
  }

  h2 {
    @apply font-header text-xl mt-6 text-accent;
  }

  p {
    @apply font-primary;
    font-weight: 300;
  }
}

/* Gradient Circle Animations */
@keyframes fade-in {
  from {
    opacity: 0;  }
  to {
    opacity: 1;
  }
}

.animate-fade-in {
  animation: fade-in 2s ease-out forwards;
}

.animate-fade-in-delay {
  animation: fade-in 2s ease-out 0.5s forwards;
  opacity: 0;
}

